# CPP-Primer-Answers

./: .gitignore  10_1.cpp  10_13.cpp  10_16.cpp  10_18.cpp  10_2.cpp  10_28.cpp  10_29.cpp  10_34.cpp  10_6.cpp  10_9.cpp  11_12.cpp  11_13.cpp  11_16.cpp  11_20.cpp  11_33.cpp  12_19.cpp  12_2.cpp  12_23.cpp  14.36  14_37.cpp  14_44.cpp  15_17.cpp  16_1_1  16_21.cpp  16_52.cpp  6.54.cc  6_56.cpp  9_27.cpp  9_28.cpp  9_5.cpp  CMakeLists.txt  Makefile  Person.cpp  Person.h  README.md  Screen.h  Window_mgr.h  build.sh  smallint.cpp  (+2 more)
Chapter01/: CMakeLists.txt  exercise_1_08.cc  exercise_1_18.cc  exercise_1_20.cc  exercise_1_22.cc  exercise_1_7.cc  exercise_1_9.cc
Chapter02/: CMakeLists.txt  exercise_2_06.cc  exercise_2_08.cc  exercise_2_09.cc  exercise_2_10.cc  exercise_2_13.cc  exercise_2_18.cc  exercise_2_25.cc  exercise_2_27.cc  exercise_2_30.cc  exercise_2_37.cc  exercise_2_39.cc  exercise_2_40.cc  exercise_2_42.cc
Chapter09/: CMakeLists.txt  exercise_9_02.cc  exercise_9_04.cc  exercise_9_05.cc  exercise_9_06.cc  exercise_9_07.cc  exercise_9_08.cc  exercise_9_11.cc  exercise_9_13.cc  exercise_9_14.cc  exercise_9_15.cc  exercise_9_16.cc  exercise_9_18.cc  exercise_9_19.cc  exercise_9_20.cc  exercise_9_22.cc  exercise_9_24.cc  exercise_9_26.cc  exercise_9_27.cc  exercise_9_28.cc  exercise_9_29.cc  exercise_9_31.cc  exercise_9_34.cc  exercise_9_38.cc  exercise_9_39.cc  exercise_9_41.cc  exercise_9_42.cc  exercise_9_43.cc  exercise_9_44.cc  exercise_9_45.cc  exercise_9_46.cc  exercise_9_47.cc  exercise_9_50.cc
src/: CMakeLists.txt  common.h
src/Chapter01/: CMakeLists.txt  exercise_1_04.cc  exercise_1_05.cc  exercise_1_06.cc  exercise_1_07.cc  exercise_1_10.cc  exercise_1_12.cc  exercise_1_16.cc  exercise_1_18.sh  exercise_1_19.cc  exercise_1_23.cc  exercise_1_25.cc
src/Chapter02/: exercise_2_04.cc  exercise_2_14.cc  exercise_2_16.cc  exercise_2_17.cc  exercise_2_18.cc  exercise_2_20.cc  exercise_2_26.cc  exercise_2_28.cc  exercise_2_34.cc  exercise_2_35.cc  exercise_2_36.cc
src/Chapter03/: CMakeLists.txt  exercise_3_01.cc  exercise_3_02.cc  exercise_3_06.cc  exercise_3_07.cc  exercise_3_08.cc  exercise_3_11.cc  exercise_3_12.cc  exercise_3_13.cc  exercise_3_17.cc  exercise_3_22.cc  exercise_3_25.cc  exercise_3_27.cc  exercise_3_28.cc  exercise_3_31.cc  exercise_3_36.cc  exercise_3_37.cc  exercise_3_44.cc  exercise_3_45.cc
src/Chapter04/: CMakeLists.txt  exercise_4_01.cc  exercise_4_02.cc  exercise_4_04.cc  exercise_4_05.cc  exercise_4_06.cc  exercise_4_13.cc  exercise_4_31.cc
src/Chapter05/: exercise_5_03.cc  exercise_5_05.cc  exercise_5_06.cc  exercise_5_10.cc  exercise_5_11.cc  exercise_5_23.cc
src/Chapter06/: CMakeLists.txt  exercise_6_03.cc  exercise_6_04.cc  exercise_6_05.cc  exercise_6_06.cc  exercise_6_10.cc  exercise_6_11.cc  exercise_6_12.cc  exercise_6_16.cc  exercise_6_18.cc  exercise_6_21.cc  exercise_6_22.cc  exercise_6_25.cc  exercise_6_27.cc  exercise_6_32.cc  exercise_6_33.cc  exercise_6_36.h  exercise_6_39.cc  exercise_6_42.cc  exercise_6_47.cc  exercise_6_51.cc  exercise_6_55.h
src/Chapter07/: exercise_7_04.h  exercise_7_05.h  exercise_7_06.h  exercise_7_09.h  exercise_7_11.h  exercise_7_12.h  exercise_7_14.h  exercise_7_21.h  exercise_7_24.h  exercise_7_29.cc  exercise_7_31.h  exercise_7_32.cc  exercise_7_43.cc  exercise_7_57.cc
src/Chapter08/: exercise_8_01.cc  exercise_8_02.cc  exercise_8_04.cc  exercise_8_09.cc  exercise_8_10.cc  exercise_8_13.cc
src/Chapter09/: CMakeLists.txt  exercise_9_02.cc  exercise_9_04.cc  exercise_9_05.cc  exercise_9_06.cc  exercise_9_07.cc  exercise_9_08.cc  exercise_9_11.cc  exercise_9_13.cc  exercise_9_14.cc  exercise_9_15.cc  exercise_9_16.cc  exercise_9_18.cc  exercise_9_19.cc  exercise_9_20.cc  exercise_9_22.cc  exercise_9_24.cc  exercise_9_26.cc  exercise_9_27.cc  exercise_9_28.cc  exercise_9_29.cc  exercise_9_31.cc  exercise_9_34.cc  exercise_9_38.cc  exercise_9_39.cc  exercise_9_41.cc  exercise_9_42.cc  exercise_9_43.cc  exercise_9_44.cc  exercise_9_45.cc  exercise_9_46.cc  exercise_9_47.cc  exercise_9_50.cc
src/Chapter10/: CMakeLists.txt  exercise_10_01.cc  exercise_10_07.cc  exercise_10_11.cc  exercise_10_13.cc  exercise_10_14.cc  exercise_10_15.cc  exercise_10_18.cc  exercise_10_19.cc  exercise_10_21.cc  exercise_10_22.cc  exercise_10_24.cc  exercise_10_27.cc  exercise_10_29.cc  exercise_10_30.cc  exercise_10_34.cc  exercise_10_35.cc
src/Chapter11/: CMakeLists.txt  exercise_11_08.cc  exercise_11_09.cc  exercise_11_10.cc  exercise_11_11.cc  exercise_11_13.cc  exercise_11_17.cc  exercise_11_18.cc  exercise_11_19.cc  exercise_11_20.cc  exercise_11_26.cc  exercise_11_29.cc  exercise_11_32.cc  exercise_11_33.cc  exercise_11_35.cc  input_file.txt
src/Chapter12/: CMakeLists.txt  exercise_12_02.cc  exercise_12_06.cc  exercise_12_07.cc  exercise_12_09.cc  exercise_12_12.cc  exercise_12_14.cc  exercise_12_15.cc  exercise_12_16.cc  exercise_12_20.cc  exercise_12_21.cc  exercise_12_25.cc
src/Chapter13/: CMakeLists.txt  exercise_13_05.cc  exercise_13_08.cc  exercise_13_11.cc  exercise_13_14.cc  exercise_13_15.cc  exercise_13_16.cc  exercise_13_18.cc  exercise_13_22.cc  exercise_13_23.cc  exercise_13_28.cc  exercise_13_34.cc  exercise_13_39.cc  exercise_13_40.cc  exercise_13_43.cc  exercise_13_46.cc  exercise_13_48.cc  exercise_13_49_Message.cc  exercise_13_55.cc  exercise_13_57.cc
src/Chapter14/: CMakeLists.txt  exercise_14_02.cc  exercise_14_16.cc  exercise_14_20.cc  exercise_14_21.cc  exercise_14_34.cc  exercise_14_39.cc  exercise_14_43.cc
src/Chapter15/: exercise_15_05.cc  exercise_15_11.cc  exercise_15_13.cc  exercise_15_16.cc  exercise_15_23.cc  exercise_15_26.cc  exercise_15_27.cc  exercise_15_28.cc  exercise_15_29.cc
src/Chapter16/: exercise_16_02.cc  exercise_16_03.cc  exercise_16_04.cc  exercise_16_05.cc  exercise_16_12.cc  exercise_16_14.cc  exercise_16_18.cc  exercise_16_21.cc  exercise_16_24.cc  exercise_16_28.cc  exercise_16_38.cc  exercise_16_39.cc  exercise_16_40.cc  exercise_16_41.cc  exercise_16_42.cc  exercise_16_45.cc  exercise_16_46.cc  exercise_16_47.cc  exercise_16_49.cc  (+6 more)
(+269 files in other folders)
